# hermes-knowledge-engine

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  HANDOVER.md  INSTALL.md  MCP.md  README.ko.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.ko.md  ARCHITECTURE.md  CHANGELOG.md  HANDOVER.md  INSTALL.ko.md  MCP.ko.md  MCP.md  ingest-sources.ko.md  operations.ko.md  phase4.md  pipeline.ko.md  vault-sync.ko.md
ingest/: base.py  test_provider.py
ingest/providers/: claude_code.py  krx.py  slack.py
processor/: briefing.py  cleaner.py  daemon.py  description_fill_processor.py  entity_processor.py  evaluator.py  keyword_processor.py  markdown_processor.py  processing_state.py  recommend.py  related_processor.py  runner.py  summary_processor.py  wiki_processor.py
processor/llm/: cache.py  client.py  local_engine.py
processor/mcp/: server.py
processor/prompts/: description_fill_prompt.txt  entity_prompt.txt  keyword_prompt.txt  project_alias.json  recommend_categories.json  related_prompt.txt  summary_prompt.txt
tests/: test_description_fill_processor.py  test_entity_processor.py
